# Chromebook-projects

./: .gitignore  Chromebook-projects-publicSSH.code-workspace  Chromebook-projects__Hexclaw_Main.code-workspace  README.md  _FE_toModify.csv  changedConfig.txt  git_history_sorted.txt  hsv_value.npy  imgui.ini  output.avi  script_git_history_sorted.sh
projects/proj_Hexclaw_cpp/Hexclaw_Main/: CMakeLists.txt  IK_header.hpp  camReset.sh
projects/proj_Hexclaw_cpp/Hexclaw_Main/HW_extra/: terminalOutput_intro.txt
projects/proj_Hexclaw_cpp/Hexclaw_Main/data/data_servoMotorDrift/: servoMotorDrift_readAngles.csv  servoMotorDrift_regrFunc_read.csv  servoMotorDrift_regrFunc_sol.csv  tempDataExample.csv
projects/proj_Hexclaw_cpp/Hexclaw_Main/esp8266/: esp8266.ino
projects/proj_Hexclaw_cpp/Hexclaw_Main/esp8266/headers/: tft_header.cpp  tft_header.hpp
projects/proj_Hexclaw_cpp/Hexclaw_Main/include/: constants.hpp  global_variables.hpp  hw_options.hpp  includes.hpp  mainOptions.hpp  opt6_terminal.hpp  servo_control.hpp
projects/proj_Hexclaw_cpp/Hexclaw_Main/include/motion_control/: motion_profiles.hpp
projects/proj_Hexclaw_cpp/Hexclaw_Main/lib/TCPThreadedServer/: TCPThreadedServer.hpp
projects/proj_Hexclaw_cpp/Hexclaw_Main/lib/ThreadedIMU/: ThreadedIMU.hpp
projects/proj_Hexclaw_cpp/Hexclaw_Main/lib/lTCPThreadedServer/: TCPThreadedServer.hpp
projects/proj_Hexclaw_cpp/Hexclaw_Main/src/: global_variables.cpp  hw_option_0.cpp  hw_option_1.cpp  hw_option_2.cpp  hw_option_3.cpp  hw_option_4.cpp  hw_option_5.cpp  hw_option_6.cpp  hw_options.cpp  main.cpp  servo_control.cpp
projects/proj_Hexclaw_cpp/PiPCA9685/examples/cpp_opencv/: CMakeCache.txt  (+5 more)
projects/proj_Hexclaw_cpp/dataPlotter/: CMakeLists.txt
projects/proj_Hexclaw_cpp/dataPlotter/include/: global_variables.hpp  includes.hpp
projects/proj_Hexclaw_cpp/dataPlotter/src/: global_variables.cpp
projects/proj_Hexclaw_cpp/files/adxl345_joan/: CMakeLists.txt  adxl345_joan  adxl345_joan.cpp
projects/proj_Hexclaw_cpp/files/udpAccel_pos/: CMakeLists.txt  main.cpp
projects/proj_Hexclaw_cpp/files/udpCOM_toESP8266/: CMakeLists.txt  udpCOM_2.cpp  udpCOM_toESP8266_board.ino  udpCOM_toESP8266_serverTest.cpp
projects/proj_Hexclaw_cpp/in rpi/: CMakeLists.txt  Hexclaw_Main.cpp  Hexclaw_Main_2.cpp  IK_header.h  IK_header.hpp  camReset.sh  esp8266.ino  hexclaw_constants.hpp  hexclaw_global.hpp  hexclaw_includes.hpp  main.cpp  main.cpp.save  two_cam_coordinate.h  two_cam_coordinate.hpp  two_cam_coordinate_test.cpp
projects/proj_Hexclaw_cpp/in rpi/HW_extra/: terminalOutput_intro.txt
projects/proj_Hexclaw_cpp/in rpi/HW_headers/: IR_camTrack.hpp  _stopped_IR_camTrack.hpp  integ_TFTdisp.hpp  mainOptions.hpp  servo_control.hpp  wirelessCOM.hpp
projects/proj_Hexclaw_cpp/in rpi/HW_options/: mainOptions.hpp  opt6_terminal.hpp
projects/proj_Hexclaw_cpp/in rpi/esp8266/: esp8266.ino
projects/proj_Hexclaw_cpp/in rpi/include/: global_variables.hpp  includes.hpp  mainOptions.hpp  opt6_terminal.hpp
projects/proj_Hexclaw_cpp/in rpi/src/: global_variables.cpp  main.cpp
projects/proj_Hexclaw_cpp/remote_GUI/: CMakeLists.txt  EXE_main  REMOTE_GUI__BUILD_OUTPUT.txt  Remote_GUI_sln.sln  imgui.ini  main.cpp
projects/proj_Hexclaw_cpp/remote_GUI/include/: constants.hpp  global_variables.hpp  imgui_extras.h  imgui_extras.hpp  includes.hpp  stb_image.h  tab_options.hpp  textureHeader.h
projects/proj_Hexclaw_cpp/remote_GUI/src/: global_variables.cpp  main.cpp  tab_options.cpp
science/math/PolyRegionCheck/app/: CMakeLists.txt  imgui.ini  main.cpp
science/math/PolyRegionCheck/lib/: CMakeLists.txt  PolyRegionCheck.hpp
science/math/analytic_geometry/camTest/: CMakeLists.txt  IPC_arraySegment.json  camTest.py  cpp_camera_csv.csv  cpp_cameras.cpp  cpp_cameras.cpp.save  output_cpp_cameras.txt
science/math/analytic_geometry/cam_coordinate_simulator/: CMakeLists.txt  imgui.ini
science/physics/Electric_Fields/: CMakeLists.txt  imgui.ini  main.cpp
science/physics/Wave_Propagation/: CMakeLists.txt  imgui.ini  main.cpp
science/physics/Wave_Propagation/include/: functions_data.hpp  functions_gui.hpp  includes.hpp  processes.hpp  variables_data.hpp  variables_gui.hpp
science/physics/Wave_Propagation/perf_delays_graph/: CMakeLists.txt  imgui.ini  perf_delaysFile__Wave_Propagation.csv
science/physics/Wave_Propagation/src/: functions_data.cpp  functions_gui.cpp  main.cpp  processes_calc.cpp  processes_gui.cpp  variables_data.cpp  variables_gui.cpp
teststuff/cpp/adxl345_xSpamerx/: CMakeLists.txt  func.cpp  func.h  main.cpp
teststuff/cpp/compile-build/macro_definitions/: CMakeLists.txt  main.cpp
teststuff/cpp/gui/fltk/: CMakeLists.txt  main  main.cpp
teststuff/cpp/gui/lib_imguiwin/: CMakeLists.txt  imgui.ini  imguiwin.cpp  imguiwin.hpp  imguiwin__includes.hpp
teststuff/cpp/opencv/img_ascii/: CMakeLists.txt  img_ascii  main.cpp
teststuff/cpp/opencv/recordVideo/: CMakeLists.txt  recordFrames.hpp  test.avi  videoRecorder.cpp
teststuff/cpp/two_cam_coordinate/: .two_cam_coordinate.hpp.swp  CMakeLists.txt  main.cpp  main2.cpp  two_cam_coordinate.cpp  two_cam_coordinate.hpp
teststuff/cpp/two_cam_coordinate/app/: CMakeLists.txt
teststuff/cpp/two_cam_coordinate/basicTest/: main.cpp
teststuff/cpp/two_cam_coordinate/lib/: CMakeLists.txt  TwoCamCoordinate.cpp
teststuff/cpp/useful/headerTest_terminalMenu/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  main.cpp  vcpkg-configuration.json  vcpkg.json
teststuff/cpp/useful/lib_SystemOfCameras/: CMakeLists.txt  SystemOfCameras.cpp  SystemOfCameras.hpp
teststuff/cpp/useful/lib_scienceunit/: CMakeLists.txt  scienceUnit.cpp  scienceUnit.hpp
teststuff/cpp/useful/nodeChart/: CMakeLists.txt  NODECHART_EXE  extra_imgui.hpp  globals_includes.hpp  globals_variables.cpp  globals_variables.hpp  guiNC_constants.hpp  gui_nodeChart.cpp  gui_nodeChart.hpp  imgui.ini  main.cpp  menuScreens.cpp  menuScreens.hpp  nodeChart.cpp  nodeChart.hpp
teststuff/cpp/useful/testHeader/: CMakeLists.txt  main  main.cpp  main_EXE  testExe
teststuff/cpp/useful/wirelessCOM_test/: CMakeLists.txt  main.cpp
(+921 files in other folders)
